--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ricardo Hofstetter Dias - Desenvolvedor Frontend</title>
+  <title>Jowallison Neves Araujo - Desenvolvedor Full Stack</title>
 
   <link rel="stylesheet" href="src/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/reset.css" />
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">JÓ</h1>
         </a>
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
@@ -53,8 +53,8 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
-          <h2>Desenvolvedor Frontend</h2>
+          <h1>Sou o Jowallison Araujo</h1>
+          <h2>Desenvolvedor full Stack</h2>
 
           <div class="redes-sociais">
             <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
@@ -66,7 +66,7 @@
 
         <div class="img-home">
           <div class="img-box inner-shadow">
-            <img class="outer-shadow" src="src/imagens/foto-perfil.png" alt="foto do perfil do Ricardo" />
+            <img class="outer-shadow" src="src/imagens/foto jo.png" alt="foto do perfil do Jowallison" />
           </div>
         </div>
       </div>
@@ -82,22 +82,26 @@
       <div class="row">
         <div class="imagem-sobre-mim">
           <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
+            <img src="src/imagens/foto jo.png" alt="foto sobre mim" class="outer-shadow" />
           </div>
         </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Ricardo Dias e sou um desenvolvedor frontend em
-              formação!</strong>
+            <strong>Olá! Me chamo jowallison e sou um desenvolvedor full stack em
+              formação!</strong> Sou Formado em Análise e Desenvolvimento de Sistemas, Atualmente  cursando uma expanção Universitaria (Dev em Dobro)
               Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
           <p>
-           Estou sempre me desafiando coim novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
+           Estou sempre me desafiando com novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
           </p>
-
+          
           <p>
-            Ah, gosto de jogos, filmes, séries, animes e outras nerdices. 💜
+            Estou Determinado a me destacar na criação de interfaces visuais intuitivas e no desenvolvimento de sistemas robustos e escaláveis no back-end. Busco oportunidades para aplicar meu conhecimento e paixão pela tecnologia em projetos desafiadores e contribuir para o sucesso da equipe.
+          </p>
+          
+          <p>
+            Ah, gosto de jogos, filmes, séries, animes e outras nerdices.🙋‍♂️💪 
           </p>
 
           <div class="botoes">
