--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
       </div>
 
       <div class="container-habilidades">
-        <div class="informacoes javascript">
+        <div class="informacoes">
           <div class="logo">
-            <i class="devicon devicon-javascript-plain" id="javascript"></i>
+            <i class="devicon devicon-javascript-plain"></i>
           </div>
           <h3>JavaScript</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>Tenho uma boa base do JS. Já entendo bem conceitos como callbacks,promisses,async/await,consumo de APIS,
+            destructuring, spread operators, dentre outros.
+          </p>
         </div>
 
         <div class="informacoes html">
@@ -136,9 +136,7 @@
             <i class="devicon devicon-html5-plain-wordmark" id="html"></i>
           </div>
           <h3>HTML5</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>Já tenho familiaridade com tags semanticas, meta tags,divs, e importação de fonts externas.</p>
         </div>
 
         <div class="informacoes css">
@@ -146,9 +144,7 @@
             <i class="devicon devicon-css3-plain-wordmark" id="css"></i>
           </div>
           <h3>CSS3</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>conheço bem os conceitos de flexbox, Grid Layout,responsividade,criação de variáveis,css semantico,dentre outros.</p>
         </div>
 
         <div class="informacoes github">
@@ -156,9 +152,7 @@
             <i class="devicon devicon-github-original" id="github"></i>
           </div>
           <h3>GitHub</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>Tenho familiaridade com criação do README, nomes de projetos e hospedagem no github Pages.</p>
         </div>
 
         <div class="informacoes git">
@@ -166,9 +160,7 @@
             <i class="devicon devicon-git-plain" id="git"></i>
           </div>
           <h3>Git</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>conheço os conceitos de versionamento de código, estado dos arquivos. e configuração do SSH no Git. Além de conhecimento sobre commits, clone de repósitorios, Push e diversos otros comandos.  </p>
         </div>
       </div>
     </div>
