--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
       <div class="container-projetos">
         <div class="projeto">        
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 1</h3>
             <div class="informacoes-projeto">          
@@ -187,7 +187,7 @@
         </div>
 
         <div class="projeto">        
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 2</h3>
             <div class="informacoes-projeto">          
@@ -198,7 +198,7 @@
         </div>
 
         <div class="projeto">     
-          <a href="https://github.com">
+          <a target="_blank" href="#">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 3</h3>
             <div class="informacoes-projeto">
@@ -209,7 +209,7 @@
         </div>
 
         <div class="projeto">
-          <a href="https://github.com">
+          <a target="_blank" href="https://github.com">
             <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
             <h3>Projeto 4</h3>
             <div class="informacoes-projeto">
@@ -226,10 +226,10 @@
     <div class="container">
       <h2>Me envie uma mensagem!</h2>
       <div class="redes-sociais">
-        <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/jowallison-araujo-b15211232/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+        <a target="_blank" href="https://wa.me/qr/4A52C3HJP5L3B1" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+        <a target="_blank" href="https://github.com/jowallison/portfolio" class="outer-shadow"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.instagram.com/jo_araujoo_/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
