--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
           <h2>Desenvolvedor full Stack</h2>
 
           <div class="redes-sociais">
-            <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/jowallison-araujo-b15211232/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+            <a target="_blank" href="https://wa.me/qr/4A52C3HJP5L3B1" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+            <a target="_blank" href="https://github.com/jowallison" class="outer-shadow"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.instagram.com/jo_araujoo_/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
@@ -228,7 +228,7 @@
       <div class="redes-sociais">
         <a target="_blank" href="https://www.linkedin.com/in/jowallison-araujo-b15211232/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
         <a target="_blank" href="https://wa.me/qr/4A52C3HJP5L3B1" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-        <a target="_blank" href="https://github.com/jowallison/portfolio" class="outer-shadow"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://github.com/jowallison" class="outer-shadow"><i class="fab fa-github"></i></a>
         <a target="_blank" href="https://www.instagram.com/jo_araujoo_/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
