mudanças no leia-me

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="container-projetos">
         <div class="projeto">        
           <a target="_blank" href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
+            <img src="#" alt="grafico" />
             <h3>Projeto 1</h3>
             <div class="informacoes-projeto">          
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
