--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 
       <div class="container-projetos">
         <div class="projeto">        
-          <a target="_blank" href="https://github.com">
-            <img src="#" alt="grafico" />
-            <h3>Projeto 1</h3>
+          <a target="_blank" href="https://github.com/jowallison/GTA-V.git">
+            <img src="./src/imagens/Vídeo sem título ‐ Feito com o Clipchamp.gif" alt="grafico" />
+            <h3>Vendas</h3>
             <div class="informacoes-projeto">          
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
               <p>🔗 Ver no GitHub Pages</p>
@@ -187,33 +187,33 @@
         </div>
 
         <div class="projeto">        
-          <a target="_blank" href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 2</h3>
+          <a target="_blank" href="https://github.com/jowallison/super-M-rio-bros.wii-.git">
+            <img src="./src/imagens/mario.gif" alt="Nome do projeto" />
+            <h3>créditos e mais informações</h3>
             <div class="informacoes-projeto">          
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML, CSS e JavaScript</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>      
           </a>          
         </div>
 
         <div class="projeto">     
-          <a target="_blank" href="#">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 3</h3>
+          <a target="_blank" href="https://github.com/jowallison/One-Piece.git">
+            <img src="./src/imagens/gif one piece.gif" alt="Nome do projeto" />
+            <h3>slides </h3>
             <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML, CSS e JavaScript</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>   
         </div>
 
         <div class="projeto">
-          <a target="_blank" href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 4</h3>
+          <a target="_blank" href="https://github.com/jowallison/pokedevs.git">
+            <img src="./src/imagens/pokedevs.gif" alt="Nome do projeto" />
+            <h3>cartas e informações</h3>
             <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML, CSS e JavaScript</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>
