--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="container-projetos">
         <div class="projeto">        
           <a target="_blank" href="https://github.com/jowallison/GTA-V.git">
-            <img src="./src/imagens/Vídeo sem título ‐ Feito com o Clipchamp.gif" alt="grafico" />
+            <img src="./src/imagens/GTA V.gif" alt="grafico" />
             <h3>Vendas</h3>
             <div class="informacoes-projeto">          
               <p>Projeto feito usando HTML, CSS e JavaScript</p>
